samples/_failures_safe/1761728776_eb5594_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4019c48.c: In function ‘main’:
./samples/SAFE/__tmp_f4019c48.c:167:9: error: expected expression at end of input
  167 |         if (strlen(input) >= sizeof(input) -
      |         ^~
./samples/SAFE/__tmp_f4019c48.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f4019c48.c:167:9: error: expected declaration or statement at end of input
